# polyglot-agent-os

./: .gitignore  AGENTS.md  project_flow.md
.agent/rules/: architecture.md  documentation-standards.md  project-standards.md  python-standards.md  rust-standards.md  skill-standards.md
.agent/workflows/: implement-feature.md  init-session.md  manage-task.md  verify-sync.md
.beads/: issues.jsonl
contracts/: learning_service.proto
docs/: beads-integration-guide.md  mcp-config.md  project-map.md  rules.md  skills.md  workflows.md
infra/: docker-compose.yml  init-db.sql
services/ai-tutor/: learning_service_pb2.py  learning_service_pb2_grpc.py  main.py  requirements.txt
services/ai-tutor/agents/: __init__.py  ingestion_agent.py
services/ai-tutor/infrastructure/: grpc_clients.py
services/ai-tutor/presentation/: routes.py
services/ai-tutor/workflows/: __init__.py
services/core-linguistic/: Cargo.toml  build.rs  build_errors.txt  build_errors_utf8.txt
services/core-linguistic/src/: lib.rs  main.rs
services/core-linguistic/src/application/: mod.rs  tokenizer.rs
services/core-linguistic/src/domain/: mod.rs
services/core-linguistic/src/infrastructure/: kafka.rs  mod.rs  postgres.rs
services/core-linguistic/src/presentation/: mod.rs
